AC_PREREQ([2.68])
AC_INIT([pet2tgz], [0.3], [alokinpwn@gmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_CHECK_HEADERS([stdlib.h strings.h unistd.h])
AC_CONFIG_FILES([Makefile])
AC_TYPE_OFF_T
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strcasecmp])
AC_PROG_INSTALL
AC_OUTPUT
